--- a/templates/base.html
+++ b/templates/base.html
@@ -17,8 +17,11 @@
 </head>
 
 <body class="text-light">
+  
+  <!-- Section Navbar -->
   {% include 'partials/navbar.html' %}
 
+  <!-- Section Content -->
   <div class="container p-4">{% block content %} {% endblock %}</div>
 
   <!-- Section Footer --->
